# SVD-OMP-only

./: .gitignore  CMakeLists.txt  main.cpp
LeoAtroxData/: SVDOMP.out  reporte-18-07-2023-14-03-29.txt  reporte-dimension-10000-time-18-07-2023-14-03-29.txt  reporte-dimension-20000-time-18-07-2023-14-03-29.txt  reporte-dimension-30000-time-18-07-2023-14-03-29.txt
lib/: JacobiMethod.cpp  JacobiMethod.h  Matrix.h  Utils.cpp  Utils.h  global.h
